# Athlix

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  pytest_config.toml
alembic/: env.py
alembic/versions/: 93b3d233b8cd_initial_models.py  bac9d5d63daa_updated_models_after_initial_.py  e3f4cec3945d_backup_after_v1_0_implementation.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: analytics.py  auth.py  exercises.py  health.py  mesocycles.py  meta.py  personal_records.py  progress.py  users.py  workout_sessions.py  workout_templates.py
app/core/: analytics.py  config.py  database.py  logging.py  personal_records.py  security.py
app/models/: __init__.py  base.py  exercise.py  mesocycle.py  records.py  user.py  workout.py
app/schemas/: analytics.py  auth.py  body_weight.py  exercise_schema.py  exercise_set.py  mesocycle.py  meta.py  personal_record.py  progress.py  user_overview.py  user_profile.py  user_schema.py  workout_session.py  workout_template.py
db_init/: 01_app_db_tables_1.sql  01_schema.sql  02_app_db_tables_2.sql  03_app_db_data.sql  app_db.sql
docs/: FRONTEND_INTEGRATION.md
scripts/: seed_exercises_data.py  start.sh  start_cli.py
sql/: app_db_data.sql
tests/: README.md  __init__.py  conftest.py  test_analytics.py  test_analytics_endpoints.py  test_api.py  test_auth.py  test_config.py  test_database.py  test_exercises.py  test_mesocycles.py  test_personal_records.py  test_progress.py  test_users.py  test_workouts.py
